Configure Cassandra to use G1GC (Java 17 compliant) and set memory limits